--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/images/logo-sm.svg" />
+  <link rel="icon" href="%PUBLIC_URL%/images/logo-sm.svg" type="image/svg+xml"/>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#f2fbff" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -11,8 +11,22 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="stylesheet" href="%PUBLIC_URL%/css/main.css" />
-
   <title>Kamil-Ussat</title>
+  <meta name="title" content="Kamil-Ussat - Premier Development Company for Web, Mobile, and Desktop Applications">
+  <meta name="description" content="Kamil-Ussat excels in developing a wide range of applications including web, mobile, and desktop programs. Our talented team delivers exceptional tailored solutions to meet your specific needs.">
+  <meta name="keywords" content="application development, web applications, mobile applications, desktop programs, software development, Kamil-Ussat, kamilussat, custom software solutions, tech solutions, app development">
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Kamil-Ussat">
+  <meta property="og:title" content="Kamil-Ussat - Premier Development Company for Web, Mobile, and Desktop Applications">
+  <meta property="og:description" content="Kamil-Ussat excels in developing a wide range of applications including web, mobile, and desktop programs. Our talented team delivers exceptional tailored solutions to meet your specific needs.">
+  <meta property="og:image" content="%PUBLIC_URL%/kamil-ussat-poster.png">
+  <meta property="og:url" content="http://kamilussat.com.tm/">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Kamil-Ussat - Premier Development Company for Web, Mobile, and Desktop Applications">
+  <meta name="twitter:description" content="Kamil-Ussat excels in developing a wide range of applications including web, mobile, and desktop programs. Our talented team delivers exceptional tailored solutions to meet your specific needs.">
+  <meta name="twitter:image" content="%PUBLIC_URL%/kamil-ussat-poster.png">
+
 </head>
 
 <body>
